Changement du fonctionnement. Passage à un fragment pour la page de login plus affichage de la page des inscriptions.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,6 +32,10 @@
             android:name="com.example.lovebot.ContactsActivity"
             android:label="@string/title_activity_contacts" >
         </activity>
+        <activity
+            android:name="com.example.lovebot.FragmentLogin"
+            android:label="@string/title_activity_fragment_login" >
+        </activity>
     </application>
 
 </manifest>
