--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,13 +9,13 @@
         android:targetSdkVersion="18" />
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-	<uses-permission android:name="android.permission.INTERNET" />
-    
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.NoTitleBar">
+        android:theme="@android:style/Theme.NoTitleBar" >
         <activity
             android:name="com.example.lovebot.MainActivity"
             android:label="@string/app_name" >
@@ -36,6 +36,10 @@
         <activity
             android:name="com.example.lovebot.FragmentLogin"
             android:label="@string/title_activity_fragment_login" >
+        </activity>
+        <activity
+            android:name="com.example.lovebot.SuccessActivity"
+            android:label="@string/title_activity_success" >
         </activity>
     </application>
 
